--- a/L12-jetty/tml/login.html
+++ b/L12-jetty/tml/login.html
@@ -7,14 +7,13 @@
 <div class="top">
     <img src="logo.png"/>
     <br/>
-    <a href="login">Login</a> <a href="admin">Admin</a>
 </div>
 <div class="login">
     <form action="/login" method="POST">
-        login: <input type="text" name="login"/>
-        <input type="submit" value="submit">
+        User: <input type="text" name="login"/>
+        <input type="submit" value="Enter">
     </form>
-    <p>Previous login: ${login}</p>
 </div>
+<p>${msg}</p>
 </body>
 </html>
